--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ services:
   - mysql
 
 before_script:
-  - cp spec/config/dbconfig.yaml.travis spec/config/dbconfig.yaml
+  - cp spec/dbconfig.yaml.travis spec/dbconfig.yaml
 
 script:
   - bundle exec rspec spec
